--- a/latex/rbffd_methods_content/rbf_examples.tex
+++ b/latex/rbffd_methods_content/rbf_examples.tex
@@ -14,8 +14,8 @@
 \centering
 \begin{tabular}{cc}
 \includegraphics[width=0.275\textwidth]{matlab/ga_rbf.pdf}
-\includegraphics[width=0.3\textwidth]{matlab/ga_rbf2D.eps}
-\includegraphics[width=0.3\textwidth]{matlab/ga_rbf3D.eps}
+\includegraphics[width=0.3\textwidth]{matlab/ga_rbf2D-eps-converted-to.pdf}
+\includegraphics[width=0.3\textwidth]{matlab/ga_rbf3D-eps-converted-to.pdf}
 \end{tabular} 
 \caption{The Gaussian (GA) RBF (Table~\ref{tbl:rbfs}) with parameter $\varepsilon=1$ and $r$ in $D = 1$, $2$ and $3$.}
 \label{fig:rbf_dimension_example}
