--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -283,14 +283,20 @@ All-to-all collectives pass data from every processor to all other processors. T
 \end{center}
 \end{figure}
 
-All-to-all collectives are only useful when data needs to be simultaneously interchanged between all processes. Since RBF-FD partitioning typically restricts overlap in subdomains to subset of neighbors, it makes sense to adopt a subset-to-subset approach, to avoid the overhead of unnecessary connections. 
+All-to-all collectives are only useful when data needs to be simultaneously interchanged between all processes. Since RBF-FD partitioning typically restricts overlap in subdomains to a subset of neighbors, it makes sense to adopt a subset-to-subset approach and avoid the overhead of unnecessary connections and memory padding required by MPI\_Alltoall. 
 Two types of subset-to-subset are illustrated in Figures~\ref{fig:mpi_alltoallv_visual} and \ref{fig:mpi_isendirecv_visual}. 
 
 
-Figure~\ref{fig:mpi_alltoallv_visual} is similar in concept to MPI\_Alltoall, although block sizes indicate variable message sizes passed between processes. In this case, an MPI\_Alltoallv collective is used to interconnect processes and transpose data. Similar to the all-to-all counterpart, MPI\_Alltoallv must be informed of the number of bytes to send to all other processes. 
-Most implementations of MPI detect when zero bytes are sent to a process via MPI\_Alltoallv and those connections are avoided resulting in the desired subset-to-subset behavior.
+\begin{figure}
+\begin{center}
+\includegraphics[width=9cm]{../figures/omnigraffle/MPI_Alltoallv_Visual.png}
+\caption{RBF-FD interchanges a variable number bytes between processes. The MPI\_Alltoallv collective compresses the interchange by allowing for variable message sizes between all processors. Assume message sizes are proportional to square size in figure. When message sizes between processes are null implementations of MPI\_Alltoallv avoid connections resulting in a subset-to-subset behavior.}
+\label{fig:mpi_alltoallv_visual}
+\end{center}
 
+The first example in Figure~\ref{fig:mpi_alltoallv_visual} shows the behavior of an MPI\_Alltoallv. The MPI\_Alltoallv collective interconnects processes and transposes data similar to MPI\_Alltoall, yet it allows variable message sizes per connection. With no padding on messages, the overall communication time drops as fewer bytes are transmitted. Modern implementations of MPI detect when zero bytes are sent to processes and avoid those connections to achieve the subset-to-subset behavior. Note that MPI\_Alltoallv should be used with caution: while zero-byte connections are avoided, the overhead in checking message sizes grows as the number of processors scales. For large $p$ the communication time can be dominated by those operations, defeating the gains in subset-to-subset connection \cite{Balaji2010}.
 
+Figure~\ref{fig:mpi_alltoallv_visual} shows a true subset-to-subset collective implemented with MPI\_Send/MPI\_Recv or MPI\_Isend/MPI\_Irecv routines. In this case communication occurs strictly with the subset of processes 
 %TODO: paper showed blocking send/recv subset-to-subset
 
 %TODO: %TODO: in which case we have a subset-to-subset.
@@ -301,19 +307,12 @@ Most implementations of MPI detect when zero bytes are sent to a process via MPI
 
 
 
-\begin{figure}
-\begin{center}
-\includegraphics[width=9cm]{../figures/omnigraffle/MPI_Alltoallv_Visual.png}
-\caption{RBF-FD interchanges a variable number bytes between processes. The MPI\_Alltoallv collective compresses the interchange by allowing for variable message sizes between all processors. Assume message sizes are proportional to square size in figure. When message sizes between processes are null implementations of MPI\_Alltoallv avoid connections resulting in a subset-to-subset behavior.}
-\label{fig:mpi_alltoallv_visual}
-\end{center}
-
 
 \end{figure}
 \begin{figure}
 \begin{center}
 \includegraphics[width=9cm]{../figures/omnigraffle/MPI_IsendIrecv_Visual.png}
-\caption{A true ``subset-to-subset" collective allows for variable message sizes, and truncates the number of connections between processors to only required connections. This collective is implemented with MPI\_Send/MPI\_Recv and MPI\_Isend/MPI\_Irecv}
+\caption{A true ``subset-to-subset" collective allows for variable message sizes, and truncates the number of connections between processors to only required connections. This collective is implemented with MPI\_Send/MPI\_Recv and MPI\_Isend/MPI\_Irecv.}
 \label{fig:mpi_isendirecv_visual}
 \end{center}
 \end{figure}
@@ -324,7 +323,7 @@ S_p = \frac{T_s + T_p}{T_s + \frac{T_p}{p}},  \nonumber
 \end{align}
 where $T_s$ and $T_p$ are the time spent in serial and parallelizable portions of code respectively. Scaling to a very large number of processors may make the time in parallelizable portions of code vanish, but $T_s$ remains constant. In any distributed implementation communication is always included in estimate for $T_s$, so it is pertinent to choose an MPI collective with minimal overhead and latency. 
 
-An all-to-all collective interconnects all processes together and ensures that zero or more bytes are transmitted between processes. All-to-all x
+
 
 MPI communication can be either blocking or non-blocking. Blocking routines such as MPI\_Send/MPI\_Recv, MPI\_Alltoall, MPI\_
 
@@ -335,26 +334,13 @@ MPI communication can be either blocking or non-blocking. Blocking routines such
 
 The benchmarks in our first paper (\cite{BolligFlyerErlebacher2012}) demonstrated the initial scaling of our implementation for a distributed RK4 iteration using primitive blocking MPI\_Send/MPI\_Recv communication routines. The collective was a round-robin all-to-all connection between processors, each taking a turn send data (0 or more bytes) to all other processes and otherwise waiting to receive data. Blocking communication was implemented for code verification. Data in \cite{BolligFlyerErlebacher2012} was acquired on the multi-GPU cluster named Keeneland \cite{Vetter2011}. The implementation demonstrated poor scaling behavior as blocking collectives serialized transmissions, and every process had to wait until the end of the collective to proceed. The objective in \cite{BolligFlyerErlebacher2012}, however, was not to present a well tuned distributed GPU implementation of RBF-FD. Instead we focused on the design decisions for partitioning, index mapping, etc. and verification of both single and distributed GPU implementations as inefficient as they were. 
 
-The most common improvement 
 
 
 %TODO: MPI history as a standard
 
 %TODO: how does \cite{Schubert2011} do it? \cite{Yokota2010}. 
-The most common communication collective is the MPI\_Alltoall shown in Figure~\ref{fig:mpi_alltoall_visual}. 
 
-All-to-all collectives would work in most cases, RBF-FD stencils are not required/guaranteed to be symmetric. As a result, we often have non-uniform sharing across partitions, so an Alltoall would require over-padding all send/receive buffers to allow the maximum receive size times the number of processors. 
-
-
-
-The data presented here considers collectives: MPI\_Alltoall, MPI\_Alltoallv and MPI\_Isend/MPI\_Irecv. 
-
-The collective operation is essentially transposing information as seen in Figure~\ref{fig:mpi_alltoallv_visual}. 
-
-An Alltoall collective shares .... as in Figure~\ref{fig:mpi_alltoall_visual}.
-
-In order to avoid excessive padding, we choose the Alltoallv collective, which allows processors to share non-uniform number of bytes with one another. Figure~\ref{fig:mpi_alltoallv_visual} illustrates the benefit of Alltoallv in comparison to Alltoall (Figure~\ref{fig:mpi_alltoall_visual}. By allowing variable number of bytes, the total message size is reduced for all processors. The downside to an alltoallv
-
+The downside to an alltoallv
 
 
 
@@ -373,16 +359,8 @@ Figure~\ref{fig:mpi_alltoallv_visual}: observes that the zero-byte messages stil
 
 MPI\_Isend/MPI\_Irecv also allows for overlapping communication and computation by posting receives early 
 
-\subsection{Alltoallv}
-As a baseline for scaling we start with MPI\_Alltoallv. 
-
-\authnote{figure: alltoall visual} 
-
-\subsection{Isend/Irecv}
 
 The first improvement on Alltoallv collectives is to truncate the number of connections made between processes. Compact stencils implies an overlap region for each processor that draws values from a limited number of neighboring processors. 
-
-\authnote{figure: isend visual}
 
 \subsection{No Decode}
 \authnote{figure: per iteration stacked bar for n=50 and 16 processes to show cost of decode}
