--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-29 13:43:40 -0500 
+%% Created for Evan Bollig at 2013-10-01 22:23:01 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Balaji2010,
+	Acmid = {1734770},
+	Address = {Thousand Oaks, CA, USA},
+	Author = {Balaji, Pavan and Chan, Anthony and Gropp, William and Thakur, Rajeev and Lusk, Ewing},
+	Date-Added = {2013-10-02 03:22:55 +0000},
+	Date-Modified = {2013-10-02 03:23:01 +0000},
+	Doi = {10.1177/1094342009359528},
+	Issn = {1094-3420},
+	Issue_Date = {February 2010},
+	Journal = {Int. J. High Perform. Comput. Appl.},
+	Keywords = {Blue Gene/P, MPI, non-data-communication overheads},
+	Month = feb,
+	Number = {1},
+	Numpages = {11},
+	Pages = {5--15},
+	Publisher = {Sage Publications, Inc.},
+	Title = {The Importance of Non-Data-Communication Overheads in MPI},
+	Url = {http://dx.doi.org/10.1177/1094342009359528},
+	Volume = {24},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1177/1094342009359528}}
 
 @misc{BolligRBFFDCode,
 	Author = {E. F. Bollig},
